@@ -1,13 +1,15 @@
 # drumkv1_jack.pri
 #
-
 PREFIX  = @ac_prefix@
+BINDIR  = @ac_bindir@
 LIBDIR  = @ac_libdir@
-CONFIG += @ac_debug@
+DATADIR = @ac_datadir@
+MANDIR  = @ac_mandir@
 
 VERSION = @ac_version@
+CONFIG += @ac_debug@
 
-INCLUDEPATH = @ac_jack_incpath@
+INCLUDEPATH += @ac_jack_incpath@
 LIBS += @ac_jack_libs@
 
 # Extra optimization flags
